Reduce temporary object creation when reading data from disk (#448)
Indirect performance improvement due to fewer GCs