@@ -38,20 +38,13 @@ public abstract class Text implements Byteable, Comparable<Text> {
 
     /**
      * Return the {@link Text} encoded in {@code bytes} so long as those bytes
-     * adhere to the format specified by the {@link #getBytes()} method. This
-     * method assumes that all the bytes in the {@code bytes} belong to the
-     * Text. In general, it is necessary to get the appropriate Text slice from
-     * the parent ByteBuffer using
-     * {@link ByteBuffers#slice(ByteBuffer, int, int)}.
+     * adhere to the format specified by the {@link #getBytes()} method.
      * 
      * @param bytes
      * @return the {@link Text}
      */
     public static Text fromByteBuffer(ByteBuffer bytes) {
-        return new StringText(
-                ByteBuffers.getString(ByteBuffers.asReadOnlyBuffer(bytes),
-                        StandardCharsets.UTF_8),
-                ByteBuffers.asReadOnlyBuffer(bytes));
+        return new StringText(ByteBuffers.getUtf8String(bytes));
     }
 
     /**
@@ -71,11 +64,10 @@ public abstract class Text implements Byteable, Comparable<Text> {
      * @return the {@link Text}
      */
     public static Text fromByteBufferCached(ByteBuffer bytes) {
-        String value = ByteBuffers.getString(
-                ByteBuffers.asReadOnlyBuffer(bytes), StandardCharsets.UTF_8);
+        String value = ByteBuffers.getUtf8String(bytes);
         Text text = cache.get(value);
         if(text == null) {
-            text = new StringText(value, bytes);
+            text = new StringText(value);
             cache.put(value, text);
         }
         return text;
@@ -391,21 +383,11 @@ public abstract class Text implements Byteable, Comparable<Text> {
         /**
          * Construct an instance that wraps the {@code text} string.
          * 
-         * @param text
+         * @param value
          */
-        private StringText(String text) {
-            this(text, null);
-        }
-
-        /**
-         * Construct a new instance.
-         * 
-         * @param text
-         * @param bytes
-         */
-        private StringText(String text, @Nullable ByteBuffer bytes) {
-            this.value = text;
-            this.bytes = bytes;
+        private StringText(String value) {
+            this.value = value;
+            this.bytes = null;
         }
 
         @Override
